fixed spacing of devs from bottom

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,6 +1,7 @@
 .HP-Body {
   /* Set height to 100% of viewport height */
   width: 100vw;
+  height: 100%;
   /* Set width to 100% of parent element */
   /* max-height: 1700px; */
   /* Set maximum height to 800 pixels */
@@ -15,7 +16,6 @@
 
 .HP-Main-Wrapper {
   /* display: grid; */
-  height: 100%;
 }
 
 .HP-Nav {
@@ -351,6 +351,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
+    bottom: 200px;
   }
 }
 
